--- a/notebooks/python_and_r.ipynb
+++ b/notebooks/python_and_r.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Python and R via JupyterHub and server RStudio\n",
+    "# Python and R via JupyterHub and RStudio Server\n",
     "\n",
     "by Landung Setiawan"
    ]
