Update slide order from Emilio's Suggestions

--- a/notebooks/python_and_r.ipynb
+++ b/notebooks/python_and_r.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Python and R via JupyterHub and RStudio Server\n",
+    "# Python and R on the Cloud via JupyterHub and RStudio Server\n",
     "\n",
     "by Landung Setiawan"
    ]
@@ -22,28 +22,11 @@
    },
    "source": [
     "## Motivation\n",
-    "\n",
+    "- Making it easy for people to use Python and R for Data Science.\n",
+    "- BiGCZ Workshop: https://github.com/BiG-CZ/wshp2017_tutorial_content\n",
+    "    - Only supported R via jupyter notebooks\n",
     "- IOOS BioData Workshop: https://github.com/ioos/BioData-Training-Workshop\n",
     "    - Trying to accomodate 50% Python and 50% R"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Technologies\n",
-    "\n",
-    "- Docker\n",
-    "- Amazon Web Services\n",
-    "- Helm\n",
-    "- Jupyterhub\n",
-    "- Kubernetes\n",
-    "- Python\n",
-    "- R"
    ]
   },
   {
@@ -69,6 +52,70 @@
    },
    "source": [
     "<img src='../img/z2j.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Jupyterhub\n",
+    "\n",
+    "A way to give a Jupyter Notebook server to each person in a group.\n",
+    "\n",
+    "Great slides about Jupyterhub: https://www.slideshare.net/willingc/jupyterhub-a-thing-explainer-overview\n",
+    "\n",
+    "<img src='../img/jupyterhub_thing_explain.jpg'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "For those that don't know what Jupyter Notebook is\n",
+    "\n",
+    "- A Jupyter Notebook App is a web application for running and sharing notebook documents.\n",
+    "- A notebook document can contain code and other elements that are executable via a kernel. It can also contain rich text and figures.\n",
+    "- A kernel executes the code in a notebook document. A kernel can be an environment (e.g. a conda environment)\n",
+    "- A Jupyter Notebook can help encourage collaboration, and reduces the need to “reinvent the wheel”\n",
+    "\n",
+    "Resource: http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Demo on AWS of Jupyterhub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Backend Technologies\n",
+    "\n",
+    "- Docker\n",
+    "- Amazon Web Services\n",
+    "- Helm\n",
+    "- Kubernetes\n",
+    "- Python\n",
+    "- R"
    ]
   },
   {
@@ -146,7 +193,7 @@
     "\n",
     "AWS has many features (I am not going to go in details)!\n",
     "\n",
-    "Great resource for anythin cloud related: https://cloudmaven.github.io/documentation/"
+    "Great resource for anything cloud related by UW eScience: https://cloudmaven.github.io/documentation/ (authored by Amanda Tan)"
    ]
   },
   {
@@ -211,52 +258,6 @@
     }
    },
    "source": [
-    "### Jupyterhub\n",
-    "\n",
-    "A way to give a Jupyter Notebook server to each person in a group.\n",
-    "\n",
-    "Great slides about Jupyterhub: https://www.slideshare.net/willingc/jupyterhub-a-thing-explainer-overview\n",
-    "\n",
-    "<img src='../img/jupyterhub_thing_explain.jpg'>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "For those that doesn't know what Jupyter Notebook is\n",
-    "\n",
-    "- A Jupyter Notebook App is a web application for running and sharing notebook documents.\n",
-    "- A notebook document can contain code and other elements that are executable via a kernel. It can also contain rich text and figures.\n",
-    "- A kernel executes the code in a notebook document. A kernel can be an environment (e.g. a conda environment)\n",
-    "- A Jupyter Notebook can help encourage collaboration, and reduces the need to “reinvent the wheel”\n",
-    "\n",
-    "Resource: http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/what_is_jupyter.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Demo on AWS of Jupyterhub"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### Kubernetes\n",
     "\n",
     "Kubernetes is an open-source system for automating deployment, scaling, and management of containerized applications (in this case Docker containers).\n",
@@ -307,7 +308,7 @@
     }
    },
    "source": [
-    "## This setup provides a great infrastructure for teaching Geospatial tools."
+    "## This setup provides a great infrastructure for teaching Geoscience/Data Science tools."
    ]
   },
   {
@@ -318,7 +319,7 @@
     }
    },
    "source": [
-    "- Common working environment (libraries, os, etc.)"
+    "- Common working environment (libraries, OS, etc.)"
    ]
   },
   {
@@ -329,7 +330,7 @@
     }
    },
    "source": [
-    "- Scalable (Though be aware that current AWS setup does not autoscale)"
+    "- Scalable"
    ]
   },
   {
@@ -347,16 +348,43 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Enable distributed group work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Thank you\n",
+    "# Thank you"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Questions?\n",
     "\n",
     "\n",
-    "Contact:<br>\n",
+    "Landung \"Don\" Setiawan <br>\n",
+    "Environmental Data Specialist <br>\n",
+    "**UW Applied Physics Laboratory** <br>\n",
+    "**eScience Institute Affiliate**<br>\n",
+    "\n",
     "landungs@uw.edu<br>\n",
-    "https://github.com/lsetiawan"
+    "https://github.com/lsetiawan<br>\n",
+    "https://www.linkedin.com/in/landungsetiawan"
    ]
   }
  ],
