Small change to k8 title

--- a/notebooks/python_and_r.ipynb
+++ b/notebooks/python_and_r.ipynb
@@ -273,7 +273,7 @@
     }
    },
    "source": [
-    "## Rough Setup\n",
+    "## How it works\n",
     "\n",
     "<img src='../img/serveimage.jpeg'>"
    ]
