--- a/notebooks/python_and_r.ipynb
+++ b/notebooks/python_and_r.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Python and R on the Cloud via JupyterHub and RStudio Server\n",
     "\n",
-    "by Landung Setiawan"
+    "by Landung \"Don\" Setiawan, UW Applied Physics Laboratory and eScience Institute"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "source": [
     "### Helm\n",
     "\n",
-    "Helm is a tool for managing Kubernetes charts. Charts are packages of pre-configured Kubernetes resources.\n",
+    "[Helm](https://helm.sh/) is a tool for managing Kubernetes charts. Charts are packages of pre-configured Kubernetes resources.\n",
     "\n",
     "Example of a chart: https://raw.githubusercontent.com/jupyterhub/zero-to-jupyterhub-k8s/master/jupyterhub/Chart.yaml"
    ]
